--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -50,7 +50,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
         <div class="g_3">
             <div class="g_3_tit"><span class="g_3_txt">奖励</span></div>
             <div class="g_3_cet">
-                <p>抽奖花费 : {$actity.expenditure}</p>
+                <p>抽奖花费 : {$actity.expenditure}{$actity.type}</p>
                 <table>
                     <tr>
                         <td width="50%">奖品</td>
