--- a/admin/Tpl/default/Turntable/show.html
+++ b/admin/Tpl/default/Turntable/show.html
@@ -41,7 +41,7 @@
 <load href='__TMPL__Common/js/jquery.weebox.js' />
 <load href='__TMPL__Common/style/weebox.css' />
 <div class="main">
-    <div class="main_title">{$actity.name}------大转盘奖品配置页面</div>
+    <div class="main_title"><a href="{:u("Turntable/index")}"> {$actity.name}</a>->大转盘奖品配置页面</div>
     <div class="blank5"></div>
     <form name="search" action="__APP__" method="get">
         <div class="button_row">
