--- a/admin/Tpl/default/Turntable/prizeedit.html
+++ b/admin/Tpl/default/Turntable/prizeedit.html
@@ -14,7 +14,7 @@
 		<td class="item_title ">奖品:</td>
 		<td class="item_input">
 			<input type="text" class="textbox" name="name" value="{$result.name}"/>
-			<span class="tip_span">数字</span>
+			<span class="tip_span">数字(谢谢惠顾填写0)</span>
 		</td>
 	</tr>
 	
