--- a/admin/Tpl/default/TurntableView/index.html
+++ b/admin/Tpl/default/TurntableView/index.html
@@ -85,8 +85,9 @@
             action="true"
             datasource="list"
             show="id:{%ID}|50px
-			,name:活动名称
-			,expenditure:花费单价
+			,actityName:活动名称
+			,user_name:中奖者
+			,prizeName:中奖物品
 			,type|type=$duobao['id']:支付类型
 		 	,status|get_status:有效"
             actionlist="id|get_handle=$duobao" />
