--- a/wap/Tpl/main/turntable.html
+++ b/wap/Tpl/main/turntable.html
@@ -198,7 +198,10 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
                 type:'POST',
                 data:{'prizeid':prizeid},
                 success:function(arg){
-
+                    if(arg.code==500){
+                        alert(arg.msg);
+                        return ;
+                    }
                 }
             })
             //奖品数量等于10,指针落在对应奖品区域的中心角度[252, 216, 180, 144, 108, 72, 36, 360, 324, 288]
