--- a/admin/Tpl/default/Scratch/add.html
+++ b/admin/Tpl/default/Scratch/add.html
@@ -26,6 +26,17 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="item_title">扣除类型:</td>
+                <td class="item_input">
+                    <select class="require" name="s_type">
+                        <option value="1" >金币</option>
+                        <option value="2" >钻石</option>
+                        <option value="3" >优惠券</option>
+                    </select>
+                </td>
+            </tr>
+
             <tr id="total_need_effect">
                 <td class="item_title">是否有效:</td>
                 <td class="item_input">
