--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -81,7 +81,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
                     </tr>
                     {foreach from=$prize item=item}
                     <tr>
-                        <td>{$item.type}{$item.name}</td>
+                        <td>{$item.type_source}{$item.name}</td>
                         <td>{$item.count}个</td>
                     </tr>
                     {/foreach}
