--- a/wap/Tpl/main/turntable.html
+++ b/wap/Tpl/main/turntable.html
@@ -76,7 +76,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
                         </tr>
                         {foreach from=$list.prize item=item}
                             <tr>
-                                <td>{$item.type}{$item.name}</td>
+                                <td>{$item.type_source}{$item.name}</td>
                                 <td>{$item.count}个</td>
                             </tr>
                         {/foreach}
