--- a/app/Tpl/main/fanwe/turntable.html
+++ b/app/Tpl/main/fanwe/turntable.html
@@ -81,7 +81,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
                     </tr>
                     {foreach from=$prize item=item}
                     <tr>
-                        <td>{$item.type_source}{$item.name}</td>
+                        <td>{$item.name}</td>
                         <td>{$item.count}个</td>
                     </tr>
                     {/foreach}
@@ -142,7 +142,7 @@ $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/awardRotate.js";
         var actityid = actity.id;
 
         for(var i in prize){
-            prizeArray[i] = prize[i].name;
+            prizeArray[i] = prize[i].abbrename;
             probability[i]= parseFloat(prize[i].probability);
             probabilitys+=probability[i];
 
